[gd_scene load_steps=16 format=3 uid="uid://b0bkkr2phnoad"]

[ext_resource type="Script" uid="uid://hrotnnh570oj" path="res://Entities/Player/player.gd" id="1_41wu2"]
[ext_resource type="Script" uid="uid://chysh3q8pyly1" path="res://Entities/Player/interaction_handler.gd" id="2_1iada"]
[ext_resource type="PackedScene" uid="uid://unuwej6fcml3" path="res://Entities/Player/Characters/swat.tscn" id="2_761t5"]
[ext_resource type="Texture2D" uid="uid://3me181xhwtt0" path="res://Assets/UI Textures/button_xbox_digital_y_4.png" id="3_vweq0"]
[ext_resource type="AudioStream" uid="uid://kyb1br2shlhi" path="res://Assets/SFX/Hurt1.ogg" id="4_x44r4"]
[ext_resource type="AudioStream" uid="uid://22k3m6on3e5e" path="res://Assets/SFX/Hurt2.ogg" id="5_761t5"]
[ext_resource type="AudioStream" uid="uid://q4mvm50ju0w2" path="res://Assets/SFX/Hurt3.ogg" id="6_hacra"]
[ext_resource type="AudioStream" uid="uid://df0lxvbbnlj7d" path="res://Assets/SFX/Hurt4.ogg" id="7_jynvv"]
[ext_resource type="AudioStream" uid="uid://b538vn7jpwyt0" path="res://Assets/SFX/Hurt5.ogg" id="8_lmeus"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mq5ly"]
radius = 0.3
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_41wu2"]
radius = 0.25
height = 1.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_41wu2"]
height = 0.992676
radius = 0.615723

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_vweq0"]
length = 0.4
slide_on_slope = true

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vweq0"]
random_pitch = 1.1
streams_count = 5
stream_0/stream = ExtResource("4_x44r4")
stream_1/stream = ExtResource("5_761t5")
stream_2/stream = ExtResource("6_hacra")
stream_3/stream = ExtResource("7_jynvv")
stream_4/stream = ExtResource("8_lmeus")

[sub_resource type="SphereShape3D" id="SphereShape3D_x44r4"]
radius = 0.25

[node name="Player" type="CharacterBody3D" groups=["freezable", "player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_41wu2")
character = ExtResource("2_761t5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = false
mesh = SubResource("CapsuleMesh_mq5ly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_41wu2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 4, 5)
top_level = true

[node name="Visual" type="Node3D" parent="."]

[node name="Pivot" type="Node3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.205806, 1.21892, 0)

[node name="HandItem" type="Node3D" parent="Visual/Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0123807, -0.101478, -0.493035)

[node name="SpotLight3D" type="SpotLight3D" parent="Visual/Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.205806, -0.257383, -0.392397)
shadow_enabled = true
spot_range = 15.0
spot_angle = 34.81

[node name="Pivot2" type="Node3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.206, 1.219, 0)

[node name="HandItem" type="Node3D" parent="Visual/Pivot2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0123807, -0.101478, -0.493035)

[node name="InteractionHandler" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 256
script = ExtResource("2_1iada")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.503662, 0)
shape = SubResource("CylinderShape3D_41wu2")

[node name="Label" type="Label" parent="InteractionHandler"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -17.5
offset_right = 40.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Pickup"

[node name="TextureRect" type="TextureRect" parent="InteractionHandler/Label"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.5
offset_top = -21.0
offset_right = 483.5
offset_bottom = 459.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_vweq0")

[node name="ProjectPosition" type="Node3D" parent="InteractionHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.95648, 0)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.503662, 0)
shape = SubResource("CylinderShape3D_41wu2")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.4, -0.377)
shape = SubResource("SeparationRayShape3D_vweq0")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_vweq0")
volume_db = -12.0
bus = &"DynamicMusic"

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13933, 0)
layers = 2
light_energy = 0.1
light_cull_mask = 4294967294
omni_range = 2.0

[node name="RevivalCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("SphereShape3D_x44r4")

[connection signal="body_entered" from="InteractionHandler" to="InteractionHandler" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionHandler" to="InteractionHandler" method="_on_body_exited"]
